# dev-stats-cli

./: .gitignore  README.md  pyproject.toml
src/dev_stats_cli/: __init__.py  cli.py  github_api.py  local_git.py
tests/: __init__.py  test_github_api.py  test_local_git.py
